--- a/style.css
+++ b/style.css
@@ -52,3 +52,43 @@ body{
     color: rgba(255, 255, 255, 0.8);
     font-size: 24px;
 }
+
+/*desktop*/
+
+@media screen and (min-width: 768px){
+    .navbar{
+        display: flex; 
+        justify-content: space-between; 
+        padding-bottom: 0; 
+        height: 70px;
+        align-items: center; 
+    }
+
+    .main-nav{
+        display: flex;
+        margin-right: 30px; 
+        flex-direction: row; 
+        justify-content: flex-end; 
+    }
+
+    .main-nav li{
+        margin: 0; 
+    }
+
+    .nav-links{
+        margin-left: 40px; 
+    }
+
+    .logo{
+        margin-top: 0; 
+    }
+
+    .navbar-toggle{
+        display: none; 
+    }
+
+    .logo:hover, 
+    .nav-links:hover{
+        color: rgba(255, 255, 255, 1)
+    }
+}
